Fully Optimized code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <header>
             <h1>Hori<span class="seo">seo</span>n</h1>
-            <section>
+            <nav>
              <ul>
                     <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,7 +24,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
-            </section>
+            </nav>
         </header>
 <!--point-->
     <main> 
@@ -32,51 +32,51 @@
         <img src=./assets/images/digital-marketing-meeting.jpg alt="People having a meeting." class="hero">
 
         <section class="content">
-            <div id="search-engine-optimization" class="search-engine-optimization">
+            <article id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="A labtop is in the top left corner on a desk with a magnifying glass on top of it. Below the labtop is a cup of coffee.  In the middle is a notebook with SEO on the middle of the page, the words content above it with a orange diamond inbetween, the word headings on the top right, the words mobile compatibility in the bottom right with a mobile phone above it, at the bottom is a thumbs up picture with the words social media below it, in the bottom left is a bridge passing over a river with the words link building under it, and at the top left is the word backlink with two chain links below it. In the upper right corner of the desk is a cup with pencils in it." class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
-            </div>
-            <div id="online-reputation-management" class="online-reputation-management">
+            </article>
+            <article id="online-reputation-management" class="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" alt="A man on his phone is in front of his computer on a desk.  The computer has a chart with the title reputation on a positive slope.  Next to the computer is a cup." class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
-            </div>
-            <div id="social-media-marketing" class="social-media-marketing">
+            </article>
+            <article id="social-media-marketing" class="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" alt="Six people are at a table from a birds eye perspective with various social media icons on the table.  The people are saying media, tweet, share, and like." class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
-            </div>
+            </article>
         </section>
         <!--code down is bottom right panel-->
         <section class="benefits">
-            <div class="benefit-lead">
+            <article class="benefit-lead">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="Sun going down a funnel coming out as a coin." />
                 <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
-            </div>
-            <div class="benefit-brand">
+            </article>
+            <article class="benefit-brand">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="Lightbulb with curved lines to indicate hearing at the sides and a suit bottom." />
                 <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-            </div>
-            <div class="benefit-cost">
+            </article>
+            <article class="benefit-cost">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="A gear with dollar signs at the bottom in circles to look like coins." />
                 <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
+            </article>
         </section>
 
     </main>
